Added Buttons for player choices and made each play one round of the game

--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
-~<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RPS</title>
+    <script src="scripts.js" defer></script>
 </head>
 <body>
-    <script src="scripts.js">
-    </script>
+    <div id="button-container">
+        <button>Rock</button>
+        <button>Paper</button>
+        <button>Scissors</button>
+    </div>
+    <div>
+
+    </div>
+    <div id="score">
+
+    </div>
 </body>
 </html>
