updated function for playing a round to update the dom with the results. Separated scoreboard/winner logic out into its own function.

--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     <script src="scripts.js" defer></script>
 </head>
 <body>
-    <div id="button-container">
+    <div>
         <button>Rock</button>
         <button>Paper</button>
         <button>Scissors</button>
     </div>
-    <div>
-
+    <div id="result">
+        
     </div>
-    <div id="score">
-
+    <div>
+        Score: <span id="human-score">0</span>-<span id="computer-score">0</span>
     </div>
 </body>
 </html>
